# TCC

./: .gitignore  CMakeLists.txt  README.md  user_geo.txt  user_geo_6.0.txt
reference_soft/: CMakeLists.txt  ISO_IEC 23008-6;202x_ed.4_DIS.docx  N0262_(Text_of_DIS_23008-6_4th_Ed).docx  changes.txt  readme.txt
reference_soft/example/: 3DAudioDecoderTest.cmake  example__C19_3_FD.mhas  example__C2_3_FD.mhas  example__C6_3_FD.mhas
reference_soft/modules/: CMakeLists.txt
reference_soft/modules/3DAudioCoder/: CMakeLists.txt
reference_soft/modules/3DAudioCoder/3DAudioDecoder/drcInterface/: uniDrcInterface_mpegh3da_default_TL-24.bit  uniDrcInterface_mpegh3da_default_noTL.bit  uniDrcInterface_mpegh3da_default_requestDialog_TL-24.bit  uniDrcInterface_mpegh3da_default_requestGeneral_TL-24.bit  uniDrcInterface_mpegh3da_default_requestGeneral_noTL.bit  uniDrcInterface_mpegh3da_default_requestLateNight_TL-24.bit  uniDrcInterface_mpegh3da_default_requestNoisy_TL-24.bit
reference_soft/modules/3DAudioCoder/3DAudioDecoder/localLoudspeakerSetup/: local_10_1_CICP.txt  local_11_1.txt  local_11_1_CICP.txt  local_14_0_CICP.txt  local_8_1_CICP.txt  local_9_0_CICP.txt
reference_soft/modules/3DAudioCoder/3DAudioDecoder/src/: channelPath.c  channelPath.h  decode.c  decode_types.h  elementMetadataPreprocessorPath.c  elementMetadataPreprocessorPath.h  fdBinauralPath.c  fdBinauralPath.h  hoaPath.c  hoaPath.h  initRenderPaths.c  initRenderPaths.h  objectPath.c  objectPath.h  profileLevelHandling.c  profileLevelHandling.h  saocPath.c  saocPath.h  tdBinauralPath.c  tdBinauralPath.h
reference_soft/modules/3DAudioCoder/3DAudioEncoder/src/: encode.c
reference_soft/modules/ascParser/: CMakeLists.txt
reference_soft/modules/ascParser/ascParserCmdl/src/: ascParserCmdl.c
reference_soft/modules/ascParser/ascParserLib/include/: ascparser.h
reference_soft/modules/ascParser/ascParserLib/src/: ascparser.c  ascparser_aots.h  ascparser_asc.c  ascparser_asc.h  ascparser_bitbuf.c  ascparser_bitbuf.h  ascparser_bitstream.c  ascparser_bitstream.h  ascparser_machine.h  ascparser_metadata.c  ascparser_metadata.h  ascparser_mhas.c  ascparser_mhas.h  ascparser_parse.c  ascparser_parse.h  ascparser_stream_wrap.c  ascparser_stream_wrap.h  ascparser_usacconfig.c  ascparser_usacconfig.h
reference_soft/modules/binaural/: CMakeLists.txt
reference_soft/modules/binaural/BRIRdata/: IIS_BRIR_FD_lowlevel.bs  IIS_BRIR_FD_lowlevel_RM8.bs  geo_28_2.txt
reference_soft/modules/binaural/interface/: readme.txt
reference_soft/modules/binaural/parametrization/parametrization_FD/: readme.txt
reference_soft/modules/binaural/parametrization/parametrization_TD/: readme.txt
reference_soft/modules/binaural/renderer/renderer_FD/: readme.txt
reference_soft/modules/binaural/renderer/renderer_TD/: readme.txt
reference_soft/modules/coreCoder/: CMakeLists.txt
reference_soft/modules/decoderInterfaces/: CMakeLists.txt
reference_soft/modules/decoderInterfaces/elementInteractionInterface/: readme.txt
reference_soft/modules/decoderInterfaces/localSetupInformationInterface/: readme.txt
reference_soft/modules/decoderInterfaces/sceneDisplacementInterface/: readme.txt
reference_soft/modules/dmxMatrixCoder/: CMakeLists.txt
reference_soft/modules/dmxMatrixCoder/dmxMatrixCommon/include/: dmx_matrix_common.h
reference_soft/modules/dmxMatrixCoder/dmxMatrixCommon/src/: dmx_matrix_common.c
reference_soft/modules/domainSwitcher/: CMakeLists.txt
reference_soft/modules/domainSwitcher/domainSwitcherCmdl/src/: domainSwitcherCmdl.c
reference_soft/modules/drcCoder/: CMakeLists.txt  CMakeLists_drcToolEncoder.txt
reference_soft/modules/dynamicObjectPriorityGenerator/: CMakeLists.txt  readme.txt
reference_soft/modules/dynamicObjectPriorityGenerator/DynamicObjectPriorityGeneratorCmdl/src/: DynamicObjectPriorityGeneratorCmdl.c
reference_soft/modules/dynamicObjectPriorityGenerator/DynamicObjectPriorityGeneratorLib/include/: DynamicObjectPriorityGeneratorlib.h
reference_soft/modules/dynamicObjectPriorityGenerator/DynamicObjectPriorityGeneratorLib/src/: DynamicObjectPriorityGeneratorlib.c
reference_soft/modules/earconCoder/: CMakeLists.txt  readme.txt
reference_soft/modules/earconCoder/src/common/: earconInfo.c  earconInfo.h  mhas.h  pcmDataConfig.c  pcmDataConfig.h  pcmDataPayload.c  pcmDataPayload.h  printHelper.c  printHelper.h  twosComplement.c  twosComplement.h
reference_soft/modules/formatConverter/: CMakeLists.txt
reference_soft/modules/gVBAPRenderer/: CMakeLists.txt
reference_soft/modules/gainDelayTrim/: distance_example.txt  process_trim_example.sh
reference_soft/modules/hoaCoder/: CMakeLists.txt
reference_soft/modules/hoaMatrixCoder/: CMakeLists.txt
reference_soft/modules/iarFormatConverter/: CMakeLists.txt
reference_soft/modules/metadataPreprocessor/: CMakeLists.txt  readme.txt
reference_soft/modules/mixer/: CMakeLists.txt
reference_soft/modules/mps3DAExtension/: readme.txt
reference_soft/modules/oamCoder/: CMakeLists.txt
reference_soft/modules/oamCoder/oamCommon/: oam_common.c  oam_common.h
reference_soft/modules/saocCoder/: CMakeLists.txt
reference_soft/scripts/mps3DAExtension/: decode3DAPhase2.bat  decode3DAPhase2.sh  decode3DAPhase2_MPS.bat  readme.txt
reference_soft/scripts/mps3DAExtension/cfg/: geo_22.2_MPS.txt  geo_9_0b.txt  geo_9_1a.txt
reference_soft/tools/: CMakeLists.txt
reference_soft/tools/AFsp/: readme.txt
reference_soft/tools/fftlib/src/: fftlib.c
reference_soft/tools/parDecorrelator/include/: parDecorrFilter.h  par_decorr.h
reference_soft/tools/parDecorrelator/src/: parDecorrFilter.cpp  par_decorr.cpp
reference_soft/tools/prodmetadata/example/: cocfg.txt  execute.sh  omf.txt  pmd.txt  pmd_1.txt  pmd_3.txt  pmd_4.txt  pmd_5.txt  readme.txt
reference_soft/tools/qmflib/include/: qmflib.h  qmflib_hybfilter.h
reference_soft/tools/qmflibCppWrap/include/: QMF_Wrapper.h
reference_soft/tools/qmflibCppWrap/src/: QMF_Wrapper.cpp
reference_soft/tools/ssnrcd/: readme.txt
reference_soft/tools/wavIO/include/: wavIO.h
reference_soft/tools/wavIO/src/: wavIO.c
(+768 files in other folders)
